--- a/Kubuernetes/Deployment-Rollback/deployment.yaml
+++ b/Kubuernetes/Deployment-Rollback/deployment.yaml
@@ -18,3 +18,36 @@ spec:
         image: my-image:latest
         ports:
         - containerPort: 80
+
+
+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+
+
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: demo-deploy
+  labels:
+    app: nginx
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+      - name: nginx
+        image: nginx:1.14.2
+        ports:
+        - containerPort: 80
+
+
+# kubectl apply -f deployment.yaml
+# kubectl get deployment
+# kubectl get rs
+# kubectl get pod
+# kubectl describe deployment <deployment name>
