--- a/Kubuernetes/Namespace/Limit-Resources.yaml
+++ b/Kubuernetes/Namespace/Limit-Resources.yaml
@@ -6,7 +6,7 @@ spec:
   containers:
   - name: resource
     image: centos
-    command: ["/bin/bash", "-c", "while true; do echo Technical-Guftgu; sleep 5 ; done"]
+    command: ["/bin/bash", "-c", "while true; do echo manoj; sleep 5 ; done"]
     resources:                                          
       requests:
         memory: "64Mi"
@@ -29,3 +29,31 @@ spec:
     limits.memory: "400Mi"
     requests.cpu: "200m"
     requests.memory: "200Mi"
+
+
+
+````````
+
+
+kind: Deployment
+apiVersion: apps/v1
+metadata:
+  name: deployments
+spec:
+  replicas: 3
+  selector:      
+    matchLabels:
+     objtype: deployment
+  template:
+    metadata:
+      name: testpod8
+      labels:
+        objtype: deployment
+    spec:
+     containers:
+       - name: c00
+         image: ubuntu
+         command: ["/bin/bash", "-c", "while true; do echo manoj; sleep 5 ; done"]
+         resources:
+            requests:
+              cpu: "200m"
